Resume button spacing fix

--- a/jdk_css.css
+++ b/jdk_css.css
@@ -19,6 +19,10 @@ a.linkcolor {
   margin-right: 35px;
 }
 
+.resume-button{
+	margin-top: 15px;
+}
+
 hr {
 width: 100%;
 height: 1px;
